@@ -96,8 +96,8 @@
       L648, 35:R#.26   @znote merida 山地车
       L654, 36:R#.27   @shader
       L700, 37:R#.28   @DirectX Tool Kit
-     Zndex_E : //z 2015-09-24 22:09:54 L.98 '6606  T241670331 .K ~761 +----+----+----+----+----+
-     TimeCnt : //z 2015-09-24 22:04:52 L.98 '6908  T241490644 .K ~36  +----+----+----+----+----+
+     Zndex_E : //z 2015-09-28 18:10:38 L.94 '20962 T3841470   .K ~764 +----+----+----+----+----+
+     TimeCnt : //z 2015-09-28 18:10:22 L.94 '20978 T3841431   .K ~37  +----+----+----+----+----+
      Reg.Cnt : //z 2015-09-24 20:55:24 L.98 '11076 T1959487447.K ~30  +----+----+----+----+----+
      #30  R+ : //z 2015-09-24 20:55:24 L.98 '11076 T1959487447.K ~30    V+.779  L+.821  
      #29  R+ : //z 2015-09-22 17:22:14 L.100'23866 T2601790260.K ~29    V+.776  L+.813  
@@ -133,7 +133,7 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-09-24 22:09:54 L.98 '6606  T241670331 .K ~791   R+.30   L+.829  --+----+
+     Version : //z 2015-09-28 18:10:38 L.94 '20962 T3841470   .K ~794   R+.30   L+.833  --+----+
      #41  R+ : //z 2015-09-24 20:55:24 L.98 '11076 T1959487447.K ~779   R+.30   L+.822  V+.779  
      #40  R+ : //z 2015-09-22 17:22:14 L.100'23866 T2601790260.K ~776   R+.29   L+.814  V+.776  
      #40  V+ : //z 2015-09-07 09:52:04 L.115'50876 T1383629914.K ~760   R+.28   L+.798  
@@ -828,4 +828,8 @@ an open source c++ 3d skeletal animation engine
 https://github.com/gamedevforks/ozz-animation
 Godot is a fully featured, open source, MIT licensed, game engine.
 https://github.com/gamedevforks/godot.git
+
+//z 2015-09-28 18:10:22 L.94 '20978 T3841431   .K[T37,L832,R30,V792]
+导入导出各种 3ds 模型
+https://github.com/assimp/assimp.git
 #endregion //z 2015-09-24 20:55:24 L.98 '11076 BG57IV3@BYH T1959487447.K.F4146951713-+----+----+
